--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "KitchenChaosClone.sln"
+    "dotnet.defaultSolution": "kitchen-chaos-clone.sln"
 }
